Le mode jeu qui fonctionne, je cache pas ma fierté